# TCBwithMongo

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  database.py  jwt_handler.py  main.py  middleware.py  model.py  requirements.txt
ECpay/: ECpay_sdk.py
backend/: .gitignore  pyproject.toml
backend/app/: crud.py  main.py  models.py  prestart.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: carts.py  home.py  login.py  products.py  products_management.py  register.py  story.py  users.py
backend/app/core/: config.py  db.py  paths.py  security.py
backend/app/core/ECpay/: ECpay_AIO.py  ECpay_sdk.py
frontend/static/Product/: cart.html  products_build.html  products_edit.html  products_management.html
frontend/static/User/: login.html  users_management.html
frontend/static/components/: navbar.html
frontend/static/css/: cart.css  login.css  product.css  product_management.css  register.css  style.css  user_management.css
static/: home.html  story.html  style.css
static/Product/: cart.html  products.html  products_build.html  products_edit.html  products_management.html
static/User/: build.html  login.html  user_edit.html  users_management.html
static/components/: footer.html  navbar.html
static/css/: home.css  product_build.css  story.css
static/js/: auth.js  navbar.js
